--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastramento e atualização de dados</title>
     <link rel="stylesheet" href="../public/css/cadastro.css">
+    <script src="https://kit.fontawesome.com/280d7ede1c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="box-formulario">
@@ -17,22 +18,22 @@
             <form action="/api/interest" method="post">
                 <span>
                     <input type="text" class="input-hidden" id="nome" name="nome" placeholder="Nome" autocomplete="off" required=""/>
-                    <label for="nome"><i class="icon icon-user-outline"></i></label>
+                    <label for="nome"><i class="fa-solid fa-user"></i></label>
                 </span>
 
                 <span>
                     <input type="text" class="input-hidden" id="dataNasc" name="dataNasc" placeholder="Data de nascimento" autocomplete="off" required=""/>
-                    <label for="data"><i class="icon icon-user-outline"></i></label>
+                    <label for="dataNasc"><i class="fa-solid fa-calendar-days"></i></label>
                 </span>
 
                 <span>
                     <input type="text" class="input-hidden" id="matricula" name="matricula" placeholder="Matrícula" autocomplete="off" required=""/>
-                    <label for="matricula"><i class="icon icon-user-outline"></i></label>
+                    <label for="matricula"><i class="fa-solid fa-code"></i></label>
                 </span>
 
                 <span>
                     <input type="text" class="input-hidden" id="email" name="email" placeholder="E-mail" autocomplete="off" required=""/>
-                    <label for="email"><i class="icon ico-mail-3"></i></label>
+                    <label for="email"><i class="fa-solid fa-envelope"></i></label>
                 </span>
 
                 <div class="box-btn">
