--- a/views/aluno.html
+++ b/views/aluno.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table id="myTable">
+        <tr>
+            <th>Nome</th>
+            <th>Data de Nascimento</th>
+            <th>Matrícula</th>
+            <th>E-mail</th>
+            <th>Status</th>
+        </tr>
+    </table>
+    <script>
+        fetch('http://localhost:3000/api/lista').then(res => res.json()).then(data => {
+            const table = document.getElementById('myTable')
+            data.forEach(item => {
+                const row = table.insertRow()
+                row.insertCell(0).innerHTML = item.nome;
+                row.insertCell(1).innerHTML = item.dataNasc;
+                row.insertCell(2).innerHTML = item.matricula;
+                row.insertCell(3).innerHTML = item.email;
+                row.insertCell(4).innerHTML = item.status;
+            })
+        })
+    </script>
 </body>
 </html>
