--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastramento e atualização de dados</title>
-    <link rel="stylesheet" href="../public/css/cadastro.css">
+    <link rel="stylesheet" href="/css/cadastro.css">
     <script src="https://kit.fontawesome.com/280d7ede1c.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -38,7 +38,7 @@
 
                 <div class="box-btn">
                     <input type="submit" value="Enviar" class="btn-submit">
-                    <input type="submit" value="Cancelar" class="btn-submit">
+                    <input type="button" value="Cancelar" class="btn-submit">
                 </div>
             </form>
         </div>
