--- a/views/aluno.html
+++ b/views/aluno.html
@@ -58,7 +58,7 @@
         }
 
         const atualizaItem = () => {
-            window.location.href = 'http://localhost:3000/api/teste/'
+            window.location.href = 'http://localhost:3000/'
         }
 
     </script>
