--- a/views/aluno.html
+++ b/views/aluno.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Alunos</title>
+    <link rel="shortcut icon" href="../public/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/tableAluno.css">
 </head>
 <body>
