--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastramento e atualização de dados</title>
+    <link rel="shortcut icon" href="../public/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/cadastro.css">
     <script src="https://kit.fontawesome.com/280d7ede1c.js" crossorigin="anonymous"></script>
 </head>
@@ -38,10 +39,15 @@
 
                 <div class="box-btn">
                     <input type="submit" value="Enviar" class="btn-submit">
-                    <input type="button" value="Cancelar" class="btn-submit">
+                    <input type="button" value="Cancelar" class="btn-submit" onclick="volta()">
                 </div>
             </form>
         </div>
     </div>
+    <script>
+        const volta = () => {
+            window.location.href = "http://localhost:3000/api/aluno/"
+        }
+    </script>
 </body>
 </html>
